# django-plugin-datasette

./: README.md  pyproject.toml
django_plugin_datasette/: __init__.py
tests/: test_django_plugin_datasette.py
tests/test_project/: settings.py
